--- a/Pages/wangxian.html
+++ b/Pages/wangxian.html
@@ -487,7 +487,7 @@
                     <div class="row">
                         <div class="col l8 s12">
                             <figure>
-                                <img src="../Assets/Character/Lan/Character Page Pics/wwx-siege.webp" alt="first siege">
+                                <img class="materialboxed responsive-img" src="../Assets/Character/Lan/Character Page Pics/wwx-siege.webp" alt="first siege">
                                 <figcaption class="center white-text">
                                     Jiang, Jin, Nie, Lan sects sieging Wei Wuxian after backing out on their deal. 
                                 </figcaption>
