--- a/Pages/Minor/xxc.html
+++ b/Pages/Minor/xxc.html
@@ -215,7 +215,7 @@
                         <figure>
                             
                             <video style="width: 100%; height: auto;" class="responsive-video" controls>
-                                <source src="../../Assets/Vids and Audio/xxc-death.mp4" type="video/mp4">
+                                <source src="../../Assets/Vids and Audio/xy-fight.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
             
