--- a/Pages/All.html
+++ b/Pages/All.html
@@ -154,7 +154,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter Page Pics/mxy-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Character%20Page%20Pics/mxy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
