--- a/Pages/All.html
+++ b/Pages/All.html
@@ -232,7 +232,7 @@
                 data-status="deceased" 
                 data-clan="jiang" 
                 data-name="Yu Ziyuan" 
-                style="background-image: url('../Assets/Character/Jiang/Character\ Page\ Pics/yzy-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/yzy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -243,7 +243,7 @@
                 data-status="alive" 
                 data-clan="jiang" 
                 data-name="Jiang Wanyin" 
-                style="background-image: url('../Assets/Character/Jiang/Character\ Page\ Pics/jwy-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/jwy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -254,7 +254,7 @@
                 data-status="deceased" 
                 data-clan="jiang" 
                 data-name="Jiang Fengmian" 
-                style="background-image: url('../Assets/Character/Jiang/Character\ Page\ Pics/jfm-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/jfm-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -265,7 +265,7 @@
                 data-status="alive" 
                 data-clan="nie" 
                 data-name="Nie Huaisang" 
-                style="background-image: url('../Assets/Character/Nie/Character\ Page\ Pics/nhs-banner.png');">
+                style="background-image: url('../Assets/Character/Nie/Character Page Pics/nhs-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/nie-symbol.png" alt="Nie Sect Logo">
                 </div>
@@ -276,7 +276,7 @@
                 data-status="deceased" 
                 data-clan="nie" 
                 data-name="Nie Mingjue" 
-                style="background-image: url('../Assets/Character/Nie/Character\ Page\ Pics/nmj-banner.png');">
+                style="background-image: url('../Assets/Character/Nie/Character Page Pics/nmj-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/nie-symbol.png" alt="Nie Sect Logo">
                 </div>
@@ -287,7 +287,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Xiao Xingchen" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/xxc-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/xxc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -298,7 +298,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Song Zichen" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/szc-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/szc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -309,7 +309,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Xue Chengmei" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/xy-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/xy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -320,7 +320,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Su She" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/ss-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/ss-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -331,7 +331,7 @@
                 data-status="alive" 
                 data-clan="minor" 
                 data-name="Ouyang Zizhen" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/oyzz-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/oyzz-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -342,7 +342,7 @@
                 data-status="alive" 
                 data-clan="minor" 
                 data-name="Xiao Xingchen" 
-                style="background-image: url('../Assets/Character/Minor/Character\ Page\ Pics/mm-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character Page Pics/mm-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -353,7 +353,7 @@
                 data-status="deceased" 
                 data-clan="wen" 
                 data-name="Wen Chao" 
-                style="background-image: url('../Assets/Character/Wen/Character\ Page\ Pics/wc-banner.png');">
+                style="background-image: url('../Assets/Character/Wen/Character%20Page%20Pics/wc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/wen-symbol.png" alt="Wen Sect Logo">
                 </div>
@@ -364,7 +364,7 @@
                 data-status="alive" 
                 data-clan="wen" 
                 data-name="Wen Qionglin" 
-                style="background-image: url('../Assets/Character/Wen/Character\ Page\ Pics/wn-banner.png');">
+                style="background-image: url('../Assets/Character/Wen/Character%20Page%20Pics/wn-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/wen-symbol.png" alt="Wen Sect Logo">
                 </div>
@@ -375,7 +375,7 @@
                 data-status="deceased" 
                 data-clan="wen" 
                 data-name="Wen Qing" 
-                style="background-image: url('../Assets/Character/Wen/Character\ Page\ Pics/wq-banner.png');">
+                style="background-image: url('../Assets/Character/Wen/Character%20Page%20Pics/wq-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/wen-symbol.png" alt="Wen Sect Logo">
                 </div>
@@ -386,7 +386,7 @@
                 data-status="deceased" 
                 data-clan="wen" 
                 data-name="Wen Zhuliu" 
-                style="background-image: url('../Assets/Character/Wen/Character\ Page\ Pics/wzl-banner.png');">
+                style="background-image: url('../Assets/Character/Wen/Character%20Page%20Pics/wzl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/wen-symbol.png" alt="Wen Sect Logo">
                 </div>
@@ -397,7 +397,7 @@
                 data-status="deceased" 
                 data-clan="wen" 
                 data-name="Wen Ruohan" 
-                style="background-image: url('../Assets/Character/Wen/Character\ Page\ Pics/wrh-banner.png');">
+                style="background-image: url('../Assets/Character/Wen/Character%20Page%20Pics/wrh-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/wen-symbol.png" alt="Wen Sect Logo">
                 </div>
@@ -408,7 +408,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Lan Sizhui" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/lqr-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/lqr-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
@@ -419,7 +419,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Lan Sizhui" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/lsz-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/lsz-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
@@ -430,7 +430,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Wei Wuxian" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/wwx-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/wwx-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
@@ -441,7 +441,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Lan Wangji" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/lwj-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/lwj-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
@@ -452,7 +452,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Lan Xichen" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/lxc-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/lxc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
@@ -463,7 +463,7 @@
                 data-status="alive" 
                 data-clan="lan" 
                 data-name="Lan Jingyi" 
-                style="background-image: url('../Assets/Character/Lan/Character\ Page\ Pics/ljy-banner.png');">
+                style="background-image: url('../Assets/Character/Lan/Character%20Page%20Pics/ljy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/lan-symbol.png" alt="Lan Sect Logo">
                 </div>
