--- a/Pages/All.html
+++ b/Pages/All.html
@@ -209,7 +209,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jin Guangyao" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jgy-banner.png');">
+                style="background-image: url('../Character/Jin/Chacter\ Page\ Pics/jgy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -232,7 +232,7 @@
                 data-status="deceased" 
                 data-clan="jiang" 
                 data-name="Yu Ziyuan" 
-                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/yzy-banner.png');">
+                style="background-image: url('../Character/Jiang/Character Page Pics/yzy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -243,7 +243,7 @@
                 data-status="alive" 
                 data-clan="jiang" 
                 data-name="Jiang Wanyin" 
-                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/jwy-banner.png');">
+                style="background-image: url('../Character/Jiang/Character%20Page%20Pics/jwy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
