--- a/Pages/All.html
+++ b/Pages/All.html
@@ -154,7 +154,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/mxy-banner.png');">
+                style="background-image: url('https://cultivatorscompendium.netlify.app/Assets/Character/Jin/Chacter%20Page%20Pics/mxy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -165,7 +165,7 @@
                 data-status="alive" 
                 data-clan="jin" 
                 data-name="Jin Rulan" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jrl-banner.png');">
+                style="background-image: url('https://cultivatorscompendium.netlify.app/assets/character/jin/chacter%20page%20pics/mxy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
