--- a/Pages/All.html
+++ b/Pages/All.html
@@ -176,7 +176,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jiang Yanli" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jyl-banner.png');">
+                style="background-image: url('/Assets/Character/Jin/Chacter\ Page\ Pics/jyl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -187,7 +187,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jzxuan-banner.png');">
+                style="background-image: url('/Assets/Character/Jin/Chacter Page Pics/jzxuan-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -198,7 +198,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jzxun-edit.png');">
+                style="background-image: url('/Assets/Character/Jin/Chacter%20Page%20Pics/jzxun-edit.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
