--- a/Pages/All.html
+++ b/Pages/All.html
@@ -154,7 +154,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/mxy-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/mxy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -165,7 +165,7 @@
                 data-status="alive" 
                 data-clan="jin" 
                 data-name="Jin Rulan" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jrl-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/jrl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -176,7 +176,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jiang Yanli" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jyl-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/jyl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -187,7 +187,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jzxuan-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/jzxuan-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -198,7 +198,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jzxun-edit.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/jzxun-edit.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -209,7 +209,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jin Guangyao" 
-                style="background-image: url('../Character/Jin/Chacter\ Page\ Pics/jgy-banner.png');">
+                style="background-image: url('../Character/Jin/CharPics/jgy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -220,7 +220,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jin Guangshan" 
-                style="background-image: url('../Assets/Character/Jin/Chacter\ Page\ Pics/jgs-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/CharPics/jgs-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
