--- a/Pages/All.html
+++ b/Pages/All.html
@@ -154,7 +154,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/mxy-banner.png');">
+                style="background-image: url('/Assets/Character/Jin/CharPics/mxy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -165,7 +165,7 @@
                 data-status="alive" 
                 data-clan="jin" 
                 data-name="Jin Rulan" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/jrl-banner.png');">
+                style="background-image: url('../../Assets/Character/Jin/CharPics/jrl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
