--- a/Pages/All.html
+++ b/Pages/All.html
@@ -176,7 +176,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jiang Yanli" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/jyl-banner.png');">
+                style="background-image: url('./Assets/Character/Jin/CharPics/jyl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
