--- a/Pages/All.html
+++ b/Pages/All.html
@@ -150,16 +150,17 @@
         <section class="cultivator-grid">
             <!-- Example Cultivator Card -->
 
-            <a href="../Pages/Jin/mxy.html" class="cultivator-card" 
-                data-status="deceased" 
-                data-clan="jin" 
-                data-name="Mo Xuanyu" 
-                style="background-image: url('/Assets/Character/Jin/CharPics/mxy-banner.png');">
-                <div class="foreground-image">
-                    <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
-                </div>
-                <span>Mo Xuanyu</span>
+            <a href="/Pages/Jin/mxy.html" class="cultivator-card" 
+               data-status="deceased" 
+               data-clan="jin" 
+               data-name="Mo Xuanyu" 
+               style="background-image: url('/Assets/Character/Jin/Chacter%20Page%20Pics/mxy-banner.png');">
+               <div class="foreground-image">
+                  <img src="/Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
+               </div>
+               <span>Mo Xuanyu</span>
             </a>
+
 
             <a href="../Pages/Jin/jrl.html" class="cultivator-card" 
                 data-status="alive" 
