--- a/Pages/All.html
+++ b/Pages/All.html
@@ -166,7 +166,7 @@
                 data-status="alive" 
                 data-clan="jin" 
                 data-name="Jin Rulan" 
-                style="background-image: url('../../Assets/Character/Jin/CharPics/jrl-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jrl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -177,7 +177,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jiang Yanli" 
-                style="background-image: url('./Assets/Character/Jin/CharPics/jyl-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jyl-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -188,7 +188,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/jzxuan-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jzxuan-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -199,7 +199,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Mo Xuanyu" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/jzxun-edit.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jzxun-edit.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -210,7 +210,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jin Guangyao" 
-                style="background-image: url('../Character/Jin/CharPics/jgy-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jgy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -221,7 +221,7 @@
                 data-status="deceased" 
                 data-clan="jin" 
                 data-name="Jin Guangshan" 
-                style="background-image: url('../Assets/Character/Jin/CharPics/jgs-banner.png');">
+                style="background-image: url('../Assets/Character/Jin/Chacter%20Page%20Pics/jgs-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jin-symbol.webp" alt="Jin Sect Logo">
                 </div>
@@ -233,7 +233,7 @@
                 data-status="deceased" 
                 data-clan="jiang" 
                 data-name="Yu Ziyuan" 
-                style="background-image: url('../Character/Jiang/Character Page Pics/yzy-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character%20Page%20Pics/yzy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -244,7 +244,7 @@
                 data-status="alive" 
                 data-clan="jiang" 
                 data-name="Jiang Wanyin" 
-                style="background-image: url('../Character/Jiang/Character%20Page%20Pics/jwy-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character%20Page%20Pics/jwy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -255,7 +255,7 @@
                 data-status="deceased" 
                 data-clan="jiang" 
                 data-name="Jiang Fengmian" 
-                style="background-image: url('../Assets/Character/Jiang/Character Page Pics/jfm-banner.png');">
+                style="background-image: url('../Assets/Character/Jiang/Character%20Page%20Pics/jfm-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/jiang-symbol.webp" alt="Jiang Sect Logo">
                 </div>
@@ -266,7 +266,7 @@
                 data-status="alive" 
                 data-clan="nie" 
                 data-name="Nie Huaisang" 
-                style="background-image: url('../Assets/Character/Nie/Character Page Pics/nhs-banner.png');">
+                style="background-image: url('../Assets/Character/Nie/Character%20Page%20Pics/nhs-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/nie-symbol.png" alt="Nie Sect Logo">
                 </div>
@@ -277,7 +277,7 @@
                 data-status="deceased" 
                 data-clan="nie" 
                 data-name="Nie Mingjue" 
-                style="background-image: url('../Assets/Character/Nie/Character Page Pics/nmj-banner.png');">
+                style="background-image: url('../Assets/Character/Nie/Character%20Page%20Pics/nmj-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/nie-symbol.png" alt="Nie Sect Logo">
                 </div>
@@ -288,7 +288,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Xiao Xingchen" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/xxc-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/xxc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -299,7 +299,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Song Zichen" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/szc-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/szc-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -310,7 +310,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Xue Chengmei" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/xy-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/xy-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -321,7 +321,7 @@
                 data-status="deceased" 
                 data-clan="minor" 
                 data-name="Su She" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/ss-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/ss-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -332,7 +332,7 @@
                 data-status="alive" 
                 data-clan="minor" 
                 data-name="Ouyang Zizhen" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/oyzz-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/oyzz-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
@@ -343,7 +343,7 @@
                 data-status="alive" 
                 data-clan="minor" 
                 data-name="Xiao Xingchen" 
-                style="background-image: url('../Assets/Character/Minor/Character Page Pics/mm-banner.png');">
+                style="background-image: url('../Assets/Character/Minor/Character%20Page%20Pics/mm-banner.png');">
                 <div class="foreground-image">
                     <img src="../Assets/BG/rogue-symbol.webp" alt="Minor Logo">
                 </div>
