--- a/Pages/Minor/xxc.html
+++ b/Pages/Minor/xxc.html
@@ -219,7 +219,7 @@
                                 Your browser does not support the video tag.
                             </video>
             
-                            <figcaption class="center white-text">Xiao Xingchen committing suicide</figcaption>
+                            <figcaption class="center white-text">Xiao Xingchen was impersonated by Xue Yang after his death</figcaption>
                         </figure>
                     </div>
 
